overlays/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: github-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: argo.github.frieza.local
    http:
      paths:
      - path: /api/v1
        backend:
          serviceName: api-gateway
          servicePort: 80
      - path: /
        backend:
          serviceName: repo-search-ui
          servicePort: 80
